Update hostConfig.factSet Add title.wrap, title.maxWidth and value.wrap Fix some CSS for better action button scaling

--- a/source/html/visualizer/css/outlookConnectorCard.css
+++ b/source/html/visualizer/css/outlookConnectorCard.css
@@ -22,7 +22,6 @@
   text-overflow: ellipsis;
   border: none;
   padding: 4px 10px 5px 10px;
-  min-width: 80px;
   text-align: center;
   vertical-align: middle;
   cursor: default;
