--- a/source/html/visualizer/scss/toast.scss
+++ b/source/html/visualizer/scss/toast.scss
@@ -6,7 +6,6 @@
     $font-size: 15px,
     $font-weight: 500, 
     $border: 2px solid transparent,
-    $min-width: null,
     $background-color: rgba(255, 255, 255, 0.2),
     $hover-background-color: null,
     $hover-border: 2px solid rgba(255, 255, 255, 0.6),
